fix horizontal scroll issue

--- a/blocks/card.css
+++ b/blocks/card.css
@@ -21,6 +21,7 @@
   padding: 0 20px;
   background-color: #fff;
   color: #000;
+  box-sizing: border-box;
 }
 
 .card__text {
