--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -16,7 +16,7 @@
   .footer {
     padding-top: 48px;
     padding-bottom: 36px;
-    padding-left: 19px;
+    padding-left: 0;
   }
 
   .footer__text {
