--- a/blocks/header.css
+++ b/blocks/header.css
@@ -10,9 +10,18 @@
     padding-top: 28px;
     padding-left: 27px;
     padding-bottom: 32px;
+    box-sizing: border-box;
   }
   .header__logo {
     width: 126px;
     height: 24px;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .header {
+    padding-left: 20px;
+    padding-right: 20px;
+    box-sizing: border-box;
   }
 }
