--- a/blocks/page.css
+++ b/blocks/page.css
@@ -39,9 +39,4 @@
     max-width: 768px;
     width: 100%;
   }
-
-  .page__section {
-    padding-left: 20px;
-    padding-right: 20px;
-  }
 }
