--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -141,5 +141,8 @@
 @media screen and (max-width: 800px) {
   .profile {
     max-width: 768px;
+    padding-left: 20px;
+    padding-right: 20px;
+    box-sizing: border-box;
   }
 }
